fixed few spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -469,7 +469,8 @@
 /**********************/
 
 .section-cta {
-  padding: 9.6rem 0;
+  /* top/ right/ bottom/ left */
+  padding: 4.8rem 0 12.8rem 0;
 }
 
 .cta {
@@ -551,6 +552,7 @@
 
 .footer {
   padding: 12.8rem 0;
+  border-top: 1px solid #eee;
 }
 
 .grid--footer {
